syntax = "proto3";

package sku;

service SKU {
    rpc ListSKU(ListSKUReq) returns (ListSKURes) {
    }
    rpc SetRequisiteSKU(SetRequisiteSKUReq) returns (NoReply) {
    }
    rpc UploadSKUImage(UploadSKUImageReq) returns (NoReply) {
    }
    rpc GetSKUByID(GetSKUByIDReq) returns (SKUInfo){
    }
}
//NoReply没有返回值
message NoReply {
}
message ListSKUReq {
    int64 Index     = 1;
    int64 PageSize  = 2;
    string SKUId    = 3;
    string SKUGroup = 4;
    string SKUName  = 5;
    string SKUBrand = 6;
    int64 Requisite = 7;
}
message ListSKURes {
    int64 Total           = 1;
    repeated SKUInfo Rows = 2;
}
message SKUInfo {
    string GID         = 1;
    string SKUId       = 2;
    string SKUImage    = 3;
    string SKUGroup    = 4;
    string SKUName     = 5;
    string SKUBrand    = 6;
    string SKUBrandSub = 7;
    string SKUCategory = 8;
    string SKUVolume   = 9;
    bool IsRequisite   = 10;
    int64 CreateTime   = 11;
    int64 UpdateTime   = 12;
}
message SetRequisiteSKUReq {
    string GID       = 1;
    bool IsRequisite = 2;
}
message UploadSKUImageReq {
    string GID      = 1;
    string SKUImage = 2;
}

message GetSKUByIDReq{
    string ID       = 1;
}